services/beehive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: beehive
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beehive
    spec:
      containers:
        - name: beehive
          image: ghcr.io/login-linjeforeningen-for-it/beehive
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 102
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
