services/beehive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beehive
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: beehive
  ports:
    - port: 3000
      nodePort: 30081
