services/beehive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehive
spec:
  ingressClassName: public
  tls:
    - hosts:
        - beehive.login.no
  rules:
    - host: beehive.login.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beehive
                port:
                  number: 3000
